fix an issue with text overflow

--- a/src/components/markdown-styles.module.css
+++ b/src/components/markdown-styles.module.css
@@ -29,6 +29,6 @@
   @apply underline;
 }
 
-.markdown code {
-  @apply break-words;
+.markdown pre {
+  @apply overflow-scroll;
 }
